--- a/src/main/Core.fxml
+++ b/src/main/Core.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLCoreController">
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.FXMLCoreController">
    <children>
       <TextArea prefHeight="200.0" prefWidth="200.0" />
       <ListView fx:id="postList" layoutY="200.0" prefHeight="200.0" prefWidth="359.0" />
