--- a/src/main/resources/Core.fxml
+++ b/src/main/resources/Core.fxml
@@ -7,8 +7,10 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLCoreController">
    <children>
-      <TextArea prefHeight="200.0" prefWidth="200.0" />
-      <ListView fx:id="postList" layoutY="200.0" prefHeight="200.0" prefWidth="359.0" />
-      <Button onAction="#handleStartButton" fx:id="startButton" layoutX="395.0" layoutY="69.0" mnemonicParsing="false" text="Start" />
+      <ListView fx:id="postList" layoutY="80.0" prefHeight="220.0" prefWidth="500.0" />
+      <Button fx:id="startButton" layoutX="381.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleStartButton" text="Start" />
+      <Label layoutX="20.0" layoutY="14.0" text="Label" />
+      <Label layoutX="20.0" layoutY="31.0" text="Label" />
+      <Label layoutX="20.0" layoutY="48.0" text="Label" />
    </children>
 </AnchorPane>
