--- a/src/main/resources/Core.fxml
+++ b/src/main/resources/Core.fxml
@@ -8,9 +8,12 @@
 <AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLCoreController">
    <children>
       <ListView fx:id="postList" layoutY="80.0" prefHeight="220.0" prefWidth="500.0" />
-      <Button fx:id="startButton" layoutX="381.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleStartButton" text="Start" />
-      <Label layoutX="20.0" layoutY="14.0" text="Label" />
-      <Label layoutX="20.0" layoutY="31.0" text="Label" />
-      <Label layoutX="20.0" layoutY="48.0" text="Label" />
+      <Button fx:id="startButton" layoutX="439.0" layoutY="27.0" mnemonicParsing="false" onAction="#handleStartButton" text="Start" />
+      <Label layoutX="20.0" layoutY="14.0" text="Title: " />
+      <Label layoutX="20.0" layoutY="31.0" text="Subreddit:" />
+      <Label layoutX="20.0" layoutY="48.0" text="URL:" />
+      <Label fx:id="titleLabel" layoutX="49.0" layoutY="14.0" text="" />
+      <Label fx:id="subredditLabel" layoutX="77.0" layoutY="31.0" text="" />
+      <Hyperlink fx:id="urlLabel" layoutX="46.0" layoutY="45.0" text="" />
    </children>
 </AnchorPane>
