--- a/src/main/resources/Core.fxml
+++ b/src/main/resources/Core.fxml
@@ -1,19 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.media.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLCoreController">
-   <children>
-      <ListView fx:id="postList" layoutY="80.0" layoutX="5.0" prefHeight="220.0" prefWidth="500.0" />
-      <Button fx:id="startButton" layoutX="439.0" layoutY="27.0" mnemonicParsing="false" onAction="#handleStartButton" text="Start" />
-      <Label layoutX="20.0" layoutY="14.0" text="Title: " />
-      <Label layoutX="20.0" layoutY="31.0" text="Subreddit:" />
-      <Label layoutX="20.0" layoutY="48.0" text="URL:" />
-      <Label fx:id="titleLabel" layoutX="49.0" layoutY="14.0" text="" />
-      <Label fx:id="subredditLabel" layoutX="77.0" layoutY="31.0" text="" />
-      <Hyperlink fx:id="urlLabel" layoutX="46.0" layoutY="45.0" text="" />
-   </children>
+	<children>
+		<ListView fx:id="postList" layoutX="5.0" layoutY="88.0" prefHeight="220.0" prefWidth="500.0" />
+		<Button fx:id="startButton" layoutX="439.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleStartButton" text="Start" />
+		<Label layoutX="20.0" layoutY="30.0" text="Title: " />
+		<Label layoutX="20.0" layoutY="47.0" text="Subreddit:" />
+		<Label layoutX="20.0" layoutY="65.0" text="URL:" />
+		<Label fx:id="titleLabel" layoutX="49.0" layoutY="30.0" text="" />
+		<Label fx:id="subredditLabel" layoutX="77.0" layoutY="47.0" text="" />
+		<Hyperlink fx:id="urlLabel" layoutX="46.0" layoutY="65.0" text="" />
+		<MediaView fitHeight="200.0" fitWidth="200.0" layoutX="-65.0" layoutY="-100.0" />
+			<MenuBar layoutX="0.0" layoutY="0.0" prefWidth="510.0">
+			<menus>
+				<Menu text="File">
+					<items>
+						<MenuItem text="Preferences" />
+					</items>
+				</Menu>
+				<Menu text="Help">
+					<items>
+						<MenuItem text="About" />
+						<SeparatorMenuItem />
+						<MenuItem text="Exit" />
+					</items>
+				</Menu>
+			</menus>
+		</MenuBar>
+	</children>
 </AnchorPane>
