--- a/src/main/resources/Core.fxml
+++ b/src/main/resources/Core.fxml
@@ -26,7 +26,7 @@
 				</Menu>
 				<Menu text="Help">
 					<items>
-						<MenuItem text="About" onAction="handleAboutButton" />
+						<MenuItem text="About" onAction="#handleAboutButton" />
 						<SeparatorMenuItem />
 						<MenuItem text="Exit" />
 					</items>
