--- a/src/main/resources/Core.fxml
+++ b/src/main/resources/Core.fxml
@@ -21,7 +21,7 @@
 			<menus>
 				<Menu text="File">
 					<items>
-						<MenuItem text="Preferences" onAction="#handlePreferencesButton" />
+						<MenuItem text="Configuration" onAction="#handleConfigButton" />
 					</items>
 				</Menu>
 				<Menu text="Help">
