--- a/src/main/resources/Core.fxml
+++ b/src/main/resources/Core.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLCoreController">
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uk.co.harrypeach.ui.FXMLCoreController">
 	<children>
 		<ListView fx:id="postList" layoutX="5.0" layoutY="88.0" prefHeight="220.0" prefWidth="500.0" />
 		<Button fx:id="startButton" layoutX="439.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleStartButton" text="Start" />
