--- a/src/main/resources/Core.fxml
+++ b/src/main/resources/Core.fxml
@@ -31,6 +31,11 @@
 						<MenuItem text="Exit" onAction="#handleExitButton"/>
 					</items>
 				</Menu>
+				<Menu text="Debug">
+					<items>
+						<MenuItem text="Add dummy post" onAction="#handleDebugAddItem" />
+					</items>
+				</Menu>
 			</menus>
 		</MenuBar>
 	</children>
