Added notification debug function and fixed #33

--- a/src/main/resources/Core.fxml
+++ b/src/main/resources/Core.fxml
@@ -36,6 +36,7 @@
 					<items>
 						<MenuItem text="Add dummy post" onAction="#handleDebugAddItem" />
 						<MenuItem text="Clear post list" onAction="#handleDebugClearItems" />
+						<MenuItem text="Create debug notification" onAction="#handleDebugCreateNotification" />
 					</items>
 				</Menu>
 			</menus>
